force-app/main/default/objects/Job_Run_History__c/Job_Run_History__c.object-meta.xml
<CustomObject>
    <label>Job Run History</label>
    <nameField>
        <displayFormat>Run History-{000000}</displayFormat>
        <label>Job Run History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Run Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>