force-app/main/default/objects/Job_Run_History__c/fields/No_of_Items_Processed__c.field-meta.xml
<CustomField>
    <fullName>No_of_Items_Processed__c</fullName>
    <label>No of Items Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>