force-app/main/default/objects/Job_Run_History__c/fields/Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Status_Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>