force-app/main/default/objects/Job_Run_History__c/fields/Unique_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Unique_Timestamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unique Timestamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>