force-app/main/default/objects/Job_Run_History__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>